--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: CloudComPy:v1.0
+    image: cloudcompy:v1.0
     container_name: cloudcompy
     volumes:
       - ~/CloudComPy/test:/root/CloudComPy
