--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     container_name: cloudcompy
     volumes:
       - ~/CloudComPy/test:/root/CloudComPy
-      - .:/app/notebooks
+      - ./notebooks:/app/notebooks
     entrypoint: /bin/bash
+    # command: jupyter notebook --ip 0.0.0.0 --port 8889 --allow-root --no-browser --notebook-dir=/app/notebooks
     ports:
       - "8888:8888"
