--- a/.github/workflows/hi.yaml
+++ b/.github/workflows/hi.yaml
@@ -16,6 +16,6 @@ jobs:
     - name: Clone CloudCompare Repository
       run: |
         git clone --recursive https://github.com/CloudCompare/CloudCompare
-        mv CloudCompare .
+        cp -r CloudCompare .
         # mv CloudCompare/.git .
         # rm -rf CloudCompare
