--- a/.github/workflows/hi.yaml
+++ b/.github/workflows/hi.yaml
@@ -22,8 +22,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgl1 libomp5 git sudo cmake gcc software-properties-common libpython3-dev pybind11-dev libgl1-mesa-dev libglu1-mesa-dev
 
-    # - name: Clone external repository
-    #   run: |
+    - name: Clone external repository
+      run: |
+          git clone https://github.com/tmontaigu/CloudCompare-PythonRuntime
+
     #     git clone --recursive https://github.com/CloudCompare/CloudCompare
 
     - name: Install additional dependencies
