--- a/.github/workflows/hi.yaml
+++ b/.github/workflows/hi.yaml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.10.8
+        architecture: x64
 
     - name: Install required packages
       run: |
@@ -32,9 +33,6 @@ jobs:
       run: |
         cd CloudCompare-PythonRuntime
         pip install wheel
-
-    - name: Build wheels
-      run: |
         pip wheel --no-deps wrapper/cccorelib
         pip wheel --no-deps wrapper/pycc
 
