--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Check Out Code
       uses: actions/checkout@v2
+      with:
+        architecture: x64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -20,6 +22,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build Docker Image
+      
       run: |
         docker-compose build cloudcompy
 
