--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,8 +12,6 @@ jobs:
     steps:
     - name: Check Out Code
       uses: actions/checkout@v2
-      with:
-        architecture: x64
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -21,14 +19,18 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Build Docker Image
+    # - name: Build Docker Image
       
+    #   run: |
+    #     docker-compose build cloudcompy
+    - name: Build Docker Image
       run: |
-        docker-compose build cloudcompy
+        docker-compose build --platform linux/amd64 cloudcompy
 
-    - name: Push Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: saintpm/cloudcompy:v1.0
+
+    # - name: Push Docker Image
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: saintpm/cloudcompy:v1.0
