--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,57 +13,24 @@ jobs:
     - name: Check Out Code
       uses: actions/checkout@v2
 
-    - name: Set up QEMU
-      run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Build and Push Docker Image
-      uses: docker/buildx-action@v2
-      with:
-        context: .
-        push: false
-        platforms: linux/amd64  # Specify the target architecture
-        tags: saintpm/cloudcompy:v1.0
-
-
-# name: Build and Push Docker Image
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - name: Check Out Code
-#       uses: actions/checkout@v2
-
-#     - name: Login to Docker Hub
-#       uses: docker/login-action@v1
-#       with:
-#         username: ${{ secrets.DOCKERHUB_USERNAME }}
-#         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-#     # - name: Build Docker Image
+    # - name: Build Docker Image
       
-#     #   run: |
-#     #     docker-compose build cloudcompy
-#     - name: Build Docker Image
-#       run: |
-#         docker-compose build --platform linux/amd64 cloudcompy
+    #   run: |
+    #     docker-compose build cloudcompy
+    - name: Build Docker Image
+      run: |
+        docker-compose build --platform linux/amd64 --verbose cloudcompy
 
 
-#     # - name: Push Docker Image
-#     #   uses: docker/build-push-action@v2
-#     #   with:
-#     #     context: .
-#     #     push: true
-#     #     tags: saintpm/cloudcompy:v1.0
+    # - name: Push Docker Image
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: saintpm/cloudcompy:v1.0
