--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apt-get update 
+        sudo apt-get update 
         apt-get install -y build-essential 
         apt-get install -y wget 
         apt-get update && apt-get install -y libgl1 libomp5 
