--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,12 +19,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update 
-        apt-get install -y build-essential 
-        apt-get install -y wget 
-        apt-get update && apt-get install -y libgl1 libomp5 
-        apt-get update && apt install -y git sudo cmake gcc software-properties-common libpython3-dev pybind11-dev libgl1-mesa-dev libglu1-mesa-dev
-        apt-get clean 
-        # rm -rf /var/lib/apt/lists/* 
+        sudo apt-get install -y build-essential 
+        sudo apt-get install -y wget 
+        sudo apt-get update && apt-get install -y libgl1 libomp5 
+        sudo apt-get update && apt install -y git sudo cmake gcc software-properties-common libpython3-dev pybind11-dev libgl1-mesa-dev libglu1-mesa-dev
+        sudo apt-get clean 
+      # rm -rf /var/lib/apt/lists/* 
         
     - name: Set up Miniconda
       uses: conda-incubator/setup-miniconda@v2
