--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,13 +18,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update 
-        sudo apt-get install -y build-essential 
-        sudo apt-get install -y wget 
-        sudo apt-get update && apt-get install -y libgl1 libomp5 
-        sudo apt-get update && apt install -y git sudo cmake gcc software-properties-common libpython3-dev pybind11-dev libgl1-mesa-dev libglu1-mesa-dev
+        sudo apt-get update && sudo apt-get upgrade
+        sudo apt-get install -y build-essential  wget libgl1 libomp5  git sudo cmake gcc software-properties-common libpython3-dev pybind11-dev libgl1-mesa-dev libglu1-mesa-dev
         sudo apt-get clean 
-      # rm -rf /var/lib/apt/lists/* 
+        sudo rm -rf /var/lib/apt/lists/* 
         
     - name: Set up Miniconda
       uses: conda-incubator/setup-miniconda@v2
