--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,11 +42,14 @@ jobs:
         mamba install -y "boost=1.74" "cgal=5.4" cmake ffmpeg "gdal=3.5" jupyterlab jupyter notebook laszip "matplotlib=3.5" "mysql=8.0" "numpy=1.22" "opencv=4.5" "openmp=8.0" "pcl=1.12" "pdal=2.4" "psutil=5.9" pybind11 "qhull=2020.2" "qt=5.15.4" "scipy=1.8" sphinx_rtd_theme spyder tbb tbb-devel "xerces-c=3.2"
         conda clean --all --yes
 
-    - name: Clone repository and install Python packages
+    - name: Clone repository 
+      run: |
+        git clone https://github.com/tmontaigu/CloudCompare-PythonPlugin.git
+        
+    - name: Install Python packages
       run: |
         . /usr/share/miniconda/etc/profile.d/conda.sh 
         conda activate CloudComPy310
-        git clone https://github.com/tmontaigu/CloudCompare-PythonPlugin.git
         cd CloudCompare-PythonRuntime
         rm -rf .git
         pip wheel --no-deps wrapper/cccorelib
