--- a/.github/workflows/hi.yaml
+++ b/.github/workflows/hi.yaml
@@ -12,11 +12,11 @@ jobs:
     - name: Checkout current repository
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.10.8
-        architecture: x64
+    # - name: Set up Python
+    #   uses: actions/setup-python@v2
+    #   with:
+    #     python-version: 3.10.8
+    #     architecture: x64
 
     - name: Install required packages
       run: |
@@ -29,17 +29,17 @@ jobs:
 
     #     git clone --recursive https://github.com/CloudCompare/CloudCompare
 
-    - name: Install additional dependencies
-      run: |
-        cd CloudCompare-PythonRuntime
-        pip install wheel
-        pip wheel --no-deps wrapper/cccorelib
-        pip wheel --no-deps wrapper/pycc
+    # - name: Install additional dependencies
+    #   run: |
+    #     cd CloudCompare-PythonRuntime
+    #     pip install wheel
+    #     pip wheel --no-deps wrapper/cccorelib
+    #     pip wheel --no-deps wrapper/pycc
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'Peter Mwendia'
-        git config --global user.email 'ptermwendia@gmail.com'
-        git add .
-        git commit -m "Add CloudCompare repository"
-        git push
+    # - name: Commit and push changes
+    #   run: |
+    #     git config --global user.name 'Peter Mwendia'
+    #     git config --global user.email 'ptermwendia@gmail.com'
+    #     git add .
+    #     git commit -m "Add CloudCompare repository"
+    #     git push
