--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 CloudComPy_Conda310_Linux64_20231026
 CloudComPy_Conda310_Linux64_20231026/*
-# app_dir
-# app_dir/*
-# info
-# notebooks
-# notebooks/*
+app_dir
+app_dir/*
+info
+notebooks
+notebooks/*
 dummy/*
 dummy
